Just some minor code updates
Adding modifier
removing unused imports
general codecleanup